updating research section

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -4,6 +4,10 @@ title: "Research Areas"
 permalink: /research/
 author_profile: true
 ---
+> **"Advancing our understanding of cryospheric change requires breaking down disciplinary silos.**
+> In glaciology, observational and modeling efforts too often operate in isolation, with limited exchange between glaciologists, geophysicists, and climate scientists.  
+> My work challenges these divisions by integrating tools and perspectives across fields to address complex, system-scale questions."
+
 
 {% if site.talkmap_link == true %}
 
