--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -4,10 +4,13 @@ title: "Research Areas"
 permalink: /research/
 author_profile: true
 ---
-> **"Advancing our understanding of cryospheric change requires breaking down disciplinary silos.**
-> In glaciology, observational and modeling efforts too often operate in isolation, with limited exchange between glaciologists, geophysicists, and climate scientists.  
-> My work challenges these divisions by integrating tools and perspectives across fields to address complex, system-scale questions."
+<h3>Research Philosophy</h3>
 
+<blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
+  <strong>"Advancing our understanding of cryospheric change requires breaking down disciplinary silos."</strong><br>
+  In glaciology, observational and modeling efforts too often operate in isolation, with limited exchange between glaciologists, geophysicists, and climate scientists. <br>
+  My work challenges these divisions by integrating tools and perspectives across fields to address complex, system-scale questions.
+</blockquote>
 
 {% if site.talkmap_link == true %}
 
