--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -4,7 +4,7 @@ title: "Research Areas"
 permalink: /research/
 author_profile: true
 ---
-<h3>Research Philosophy</h3>
+<h3>Guiding Perspective</h3>
 
 <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
   <strong>"Advancing our understanding of cryospheric change requires breaking down disciplinary silos."</strong><br>
