google scholar link

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,7 +6,10 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can find all of my publications on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">
+    You can find all of my publications on my 
+    <a href="{{site.author.googlescholar}}" target="_blank" rel="noopener noreferrer">Google Scholar</a> profile.
+  </div>
 {% endif %}
 
 {% include base_path %}
