--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,13 +1,19 @@
 ---
 layout: archive
-title: "Research Philosophy"
+title: "Research Overview"
 permalink: /research/
 author_profile: true
 ---
 <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
+  <strong>"Predicting the future of Antarctica and Greenland starts with characterizing what is happening deep beneath the ice surface."</strong><br>
+  Conditions at the ice sheet base govern ice flow and stability, yet they remain poorly understood and underrepresented in models. I work at the intersection of computational geophysics, numerical modeling, and climate science to close this gap, improving predictions of ice sheet change in a warming world.  
+</blockquote>
+
+
+<!-- <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
   <strong>"Advancing our understanding of cryospheric change requires breaking through disciplinary silos."</strong><br>
   In glaciology, observational and modeling efforts too often operate in isolation, with limited exchange between glaciologists, geophysicists, and climate scientists. My work challenges these divisions by integrating tools and perspectives across fields to address complex, system-scale questions.
-</blockquote>
+</blockquote> -->
 
 {% if site.talkmap_link == true %}
 
