--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -4,10 +4,16 @@ title: "Research Overview"
 permalink: /research/
 author_profile: true
 ---
+
 <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
+<strong>"Predicting the future of polar ice sheets and global sea level requires connecting what we can observe today with how ice will evolve tomorrow."
+  My work builds new ways to turn geophysical signals into physical understanding, from radar echoes deep inside ice to models that project ice loss and sea-level rise under a changing climate."
+</blockquote>
+
+<!-- <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
   <strong>"Predicting the future of Antarctica and Greenland starts with characterizing what is happening deep beneath the ice surface."</strong><br>
   Conditions at the ice sheet base greatly influence ice flow and stability, yet they remain poorly understood and underrepresented in models. I work at the intersection of computational geophysics, numerical modeling, and climate science to close this gap, improving predictions of ice loss and sea level rise in a warming world.  
-</blockquote>
+</blockquote> -->
 
 
 <!-- <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
