--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: archive
 title: "Teaching"
 permalink: /teaching/
@@ -22,5 +22,5 @@ author_profile: true
       </div>
     </article>
   {% endfor %}
-</div>
+</div> -->
 
