Resarch quote update

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
-  <strong>"Predicting the future of polar ice sheets and global sea level requires connecting what we can observe today with how we project ice will evolve tomorrow."</strong><br>
+  <strong>"Predicting polar ice sheet change and global sea level rise depends on connecting what we observe today with how ice will evolve in the future."</strong><br>
   My work builds new ways to turn geophysical signals into physical understanding, from radar echoes deep inside ice to models that project ice loss and sea-level rise under a changing climate.
 </blockquote>
 
