--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -6,8 +6,7 @@ author_profile: true
 ---
 
 <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
-  <strong>"Predicting polar ice sheet change and global sea level rise depends on connecting what we observe today with how ice will evolve in the future."</strong><br>
-  My work builds new ways to turn geophysical signals into physical understanding, from radar echoes deep inside ice to models that project ice loss and sea-level rise under a changing climate.
+  I study the processes that control polar ice sheet flow and their impact on global sea level rise. My work builds quantitative links between what we can observe in the ice today, especially with radar sounding, and what ice sheet models need to better project future change.
 </blockquote>
 
 <!-- <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
