undoing research page problems

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,4 +1,4 @@
-<!-- ---
+---
 layout: archive
 title: "Research Overview"
 permalink: /research/
@@ -28,83 +28,4 @@ author_profile: true
 
 {% for post in site.talks %}
   {% include archive-single-talk.html %}
-{% endfor %} --> -->
-
----
-layout: archive
-title: "Research Overview"
-permalink: /research/
-author_profile: true
----
-
-<blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
-  I study the processes that control polar ice sheet flow and their impact on global sea level rise. My work builds quantitative links between what we can observe in the ice today, especially with radar sounding, and what ice sheet models need to better project future change.
-</blockquote>
-
-<h2 style="font-size: 1.35em; margin-top: 1.2em; margin-bottom: 0.4em;">
-  Geophysical imaging of the ice sheet subsurface
-</h2>
-
-<div style="font-size: 0.85em; margin-top: 0.5em;">
-  <img src="/images/radar.png"
-       alt=""
-       style="
-         float: right;
-         width: 450px;
-         margin: 0 0 0.5em 1.5em;
-         border-radius: 6px;
-         box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-       ">
-
-  <p>
-    Radar sounding provides the only continent scale view of the ice sheet subsurface, from internal layering to the ice bed. I develop analysis methods that turn radar echoes into physical information about temperature, ice properties, and basal conditions, with uncertainty estimates that make the results usable in modeling. For example, I built a statistical framework to classify frozen and thawed bed conditions beneath the Wilkes Subglacial Basin outflow, including confidence for each classification, producing one of the first radar based thermal state assessments for a region central to East Antarctica stability. I also develop attenuation based constraints from radar returned power that can be compared with borehole and model based estimates.
-  </p>
-
-  <div style="clear: both;"></div>
-</div>
-
-<h2 style="font-size: 1.35em; margin-top: 1.2em; margin-bottom: 0.4em;">
-  Turning observations into model ready constraints
-</h2>
-
-<div style="margin-top: 0.5em; font-size: 0.85em;">
-  <p>
-    A key challenge in ice sheet science is converting geophysical observations into quantitative constraints that ice flow models can use, especially for basal and englacial conditions that are rarely measured directly. My approach is to develop inversion and probabilistic frameworks that translate geophysical measurements into model inputs, including basal friction and thermal state, and use that to quantify what is strongly constrained by data and what remains most uncertain.
-  </p>
-</div>
-
-<h2 style="font-size: 1.35em; margin-top: 1.2em; margin-bottom: 0.4em;">
-  Ice flow simulations that identify key data needs
-</h2>
-
-<div style="display: flex; align-items: center; justify-content: space-between; margin-top: 0.5em;">
-  <div style="flex: 1; padding-right: 20px; font-size: 0.85em;">
-    <p>
-      I use process based modeling to test how sensitive ice loss is to poorly observed basal conditions and to identify which measurements will most reduce projection uncertainty.
-    </p>
-    <p>
-      <a href="/publications/#publication-2022-Dawson">My research in <em>Nature Communications</em></a> used ISSM to show that modest basal warming in near melt regions can greatly reduce basal friction and increase ice discharge in parts of East Antarctica often treated as stable. This links basal thermal constraints to where future ice loss can accelerate and helps identify regions where observations are most needed.
-    </p>
-  </div>
-
-  <div style="flex-shrink: 0; display: flex; align-items: center; justify-content: flex-end;">
-    <img src="/images/thermal.png" alt="" style="width: 400px; border-radius: 6px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-  </div>
-</div>
-
-<h2 style="font-size: 1.35em; margin-top: 1.2em; margin-bottom: 0.4em;">
-  Cross system perspective spanning cryosphere, climate, and ocean forcing
-</h2>
-
-<div style="margin-top: 0.5em; font-size: 0.85em;">
-  <p>
-    Ice sheets respond to both internal basal physics and external forcing. I work with oceanographers and climate scientists to connect the observed basal state to ice shelf melt, grounding zone risk and ocean and atmospheric drivers, using geophysical constraints to guide idealized and targeted modeling.
-  </p>
-</div>
-
-<!-- Remove this loop if you do not want research to be treated as talks -->
-<!--
-{% for post in site.talks %}
-  {% include archive-single-talk.html %}
-{% endfor %}
--->
+{% endfor %} -->
