more format testing

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -20,7 +20,7 @@ author_profile: true
   In glaciology, observational and modeling efforts too often operate in isolation, with limited exchange between glaciologists, geophysicists, and climate scientists. My work challenges these divisions by integrating tools and perspectives across fields to address complex, system-scale questions.
 </blockquote> -->
 
-<!-- {% if site.talkmap_link == true %}
+{% if site.talkmap_link == true %}
 
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
