more smaller updates

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
-  I study the processes that control polar ice sheet flow and their impact on global sea level rise. My work builds quantitative links between what we can observe in the ice today, especially with radar sounding, and what ice sheet models need to better project future change.
+  I study the processes that control polar ice sheet flow and their impact on global sea level rise. My work builds quantitative links between what we can observe today and what ice sheet models need to better project future change.
 </blockquote>
 
 <!-- <blockquote style="font-style: italic; border-left: 4px solid #ccc; padding-left: 1em; margin: 1.5em 0;">
